# pme

./: .gitignore  .travis.yml  LICENSE  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  glucose.supp
examples/: bob2.quip.pme  bob2.quip.proof  bob2.umcic3.pme  bob2.umcic3.proof  bobuns2p10d100l.truss.proof  eijks208o.truss.pme  eijks208o.truss.proof  eijks208o.umcic3.proof  intel001.quip.pme  intel001.truss.pme  intel001.truss.proof  intel001.umcic3.proof  pdtpmsarbiter.quip.pme  pdtpmsarbiter.quip.proof  pdtpmsarbiter.truss.pme  pdtpmsarbiter.truss.proof  pdtpmsarbiter.umcic3.pme  pdtpmsarbiter.umcic3.proof  pdtpmss1269b.quip.pme  pdtpmss1269b.truss.proof  pdtvisblackjack2.quip.pme  pdtvisblackjack2.quip.proof  pdtvisblackjack2.truss.pme  pdtvisblackjack2.truss.proof  pdtvisblackjack2.umcic3.pme  pdtvisblackjack2.umcic3.proof  pdtvisgigamax4.truss.pme  pdtvisgigamax4.truss.proof  pdtvisgigamax4.umcic3.proof  pdtvisminmaxr1.umcic3.pme  pdtvisvending07.quip.pme  pdtvisvending07.quip.proof  pdtvisvending07.truss.pme  pdtvisvending07.truss.proof  pdtvisvending07.umcic3.proof  power2bit128.truss.proof  power2bit128.umcic3.pme  vis4arbitp1.quip.pme  vis4arbitp1.truss.pme  vis4arbitp1.truss.proof  (+1 more)
examples/bob2.quip.pme.minimized/: bob2.quip.marco1.pme  bob2.quip.marco2.pme  bob2.quip.marco3.pme  bob2.quip.marco4.pme  bob2.quip.marco5.pme
examples/bob2.truss.pme.minimized/: bob2.truss.marco0.pme
examples/bob2.umcic3.pme.minimized/: bob2.umcic3.marco100.pme  bob2.umcic3.marco103.pme  bob2.umcic3.marco104.pme  bob2.umcic3.marco106.pme  bob2.umcic3.marco108.pme  bob2.umcic3.marco11.pme  bob2.umcic3.marco112.pme  bob2.umcic3.marco113.pme  bob2.umcic3.marco114.pme  bob2.umcic3.marco115.pme  bob2.umcic3.marco117.pme  bob2.umcic3.marco118.pme  bob2.umcic3.marco119.pme  bob2.umcic3.marco120.pme  bob2.umcic3.marco123.pme  bob2.umcic3.marco13.pme  bob2.umcic3.marco131.pme  bob2.umcic3.marco132.pme  bob2.umcic3.marco134.pme  bob2.umcic3.marco14.pme  bob2.umcic3.marco140.pme  bob2.umcic3.marco143.pme  bob2.umcic3.marco15.pme  bob2.umcic3.marco19.pme  bob2.umcic3.marco24.pme  bob2.umcic3.marco25.pme  bob2.umcic3.marco27.pme  bob2.umcic3.marco28.pme  bob2.umcic3.marco29.pme  bob2.umcic3.marco33.pme  bob2.umcic3.marco35.pme  bob2.umcic3.marco37.pme  bob2.umcic3.marco38.pme  bob2.umcic3.marco4.pme  bob2.umcic3.marco46.pme  bob2.umcic3.marco48.pme  bob2.umcic3.marco50.pme  bob2.umcic3.marco51.pme  bob2.umcic3.marco52.pme  bob2.umcic3.marco58.pme  (+20 more)
examples/eijks208o.quip.pme.minimized/: eijks208o.quip.marco0.pme
examples/eijks208o.umcic3.pme.minimized/: eijks208o.umcic3.marco0.pme
examples/intel001.truss.pme.minimized/: intel001.truss.marco0.pme
examples/pdtpmsarbiter.truss.pme.minimized/: pdtpmsarbiter.truss.marco0.pme
examples/pdtpmsarbiter.umcic3.pme.minimized/: pdtpmsarbiter.umcic3.marco0.pme  pdtpmsarbiter.umcic3.marco1.pme  pdtpmsarbiter.umcic3.marco10.pme  pdtpmsarbiter.umcic3.marco11.pme  pdtpmsarbiter.umcic3.marco12.pme  pdtpmsarbiter.umcic3.marco13.pme  pdtpmsarbiter.umcic3.marco14.pme  pdtpmsarbiter.umcic3.marco15.pme  pdtpmsarbiter.umcic3.marco16.pme  pdtpmsarbiter.umcic3.marco17.pme  pdtpmsarbiter.umcic3.marco18.pme  pdtpmsarbiter.umcic3.marco19.pme  pdtpmsarbiter.umcic3.marco2.pme  pdtpmsarbiter.umcic3.marco20.pme  pdtpmsarbiter.umcic3.marco21.pme  pdtpmsarbiter.umcic3.marco22.pme  pdtpmsarbiter.umcic3.marco23.pme  pdtpmsarbiter.umcic3.marco24.pme  pdtpmsarbiter.umcic3.marco25.pme  pdtpmsarbiter.umcic3.marco26.pme  pdtpmsarbiter.umcic3.marco27.pme  pdtpmsarbiter.umcic3.marco28.pme  pdtpmsarbiter.umcic3.marco29.pme  pdtpmsarbiter.umcic3.marco3.pme  pdtpmsarbiter.umcic3.marco30.pme  pdtpmsarbiter.umcic3.marco31.pme  pdtpmsarbiter.umcic3.marco32.pme  pdtpmsarbiter.umcic3.marco33.pme  pdtpmsarbiter.umcic3.marco34.pme  pdtpmsarbiter.umcic3.marco35.pme  pdtpmsarbiter.umcic3.marco36.pme  pdtpmsarbiter.umcic3.marco37.pme  pdtpmsarbiter.umcic3.marco38.pme  pdtpmsarbiter.umcic3.marco39.pme  pdtpmsarbiter.umcic3.marco4.pme  pdtpmsarbiter.umcic3.marco40.pme  pdtpmsarbiter.umcic3.marco41.pme  pdtpmsarbiter.umcic3.marco42.pme  pdtpmsarbiter.umcic3.marco43.pme  pdtpmsarbiter.umcic3.marco44.pme  (+8 more)
examples/pdtpmss1269b.truss.pme.minimized/: pdtpmss1269b.truss.marco0.pme
examples/pdtvisblackjack2.quip.pme.minimized/: pdtvisblackjack2.quip.marco0.pme
examples/pdtvisblackjack2.truss.pme.minimized/: pdtvisblackjack2.truss.marco0.pme
examples/pdtvisblackjack2.umcic3.pme.minimized/: pdtvisblackjack2.umcic3.marco0.pme  pdtvisblackjack2.umcic3.marco1.pme  pdtvisblackjack2.umcic3.marco10.pme  pdtvisblackjack2.umcic3.marco11.pme  pdtvisblackjack2.umcic3.marco12.pme  pdtvisblackjack2.umcic3.marco13.pme  pdtvisblackjack2.umcic3.marco14.pme  (+73 more)
m4/: ax_cxx_compile_stdcxx.m4
scripts/: make-golden  make-golden-ivcs.in  make-golden.in  pme-canonicalize  run-integration  run-integration.in
src/aiger/: aiger.c  (+1 more)
src/sat/solvers/glucose/: Makefile.am  Makefile.in  configure  configure.ac
src/sat/solvers/glucose/src/core/: Solver.cc
src/sat/solvers/minisat/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
src/sat/solvers/minisat/minisat/core/: Solver.cc  SolverTypes.h
tests/: test_basics.cpp  test_bmc_solver.cpp  test_bvc_frame_solver.cpp  test_bvc_solver.cpp  test_cardinality_constraint.cpp  test_check_cex.cpp  test_clause_database.cpp  test_collapse_set_finder.cpp  test_consecution_checker.cpp  test_correction_set_finder.cpp  test_debug_transition_relation.cpp  test_debugger.cpp  test_find_minimal_support.cpp  test_find_safe_mis.cpp  test_frame_solver.cpp  test_hitting_set_finder.cpp  test_hybrid_safety_checker.cpp  test_ic3_debugger.cpp  test_ic3_solver.cpp  test_inductive_trace.cpp  test_ivc.cpp  test_ivc_checker.cpp  test_logger.cpp  test_map_solver.cpp  test_maxsat_solver.cpp  test_minimal_support_finder.cpp  test_mis_finder.cpp  test_mus_finder.cpp  test_proof_checker.cpp  test_proof_minimizer.cpp  test_sat.cpp  test_sat_adaptor.cpp  test_sorting_network.cpp  test_transition_relation.cpp  test_unsat_core_lifter.cpp  test_variable_manager.cpp
(+310 files in other folders)
