AC_INIT([pme], [0.0.1], [ryan@berryhill.xyz])
AC_PREREQ([2.69])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([build-aux])

AM_INIT_AUTOMAKE([1.15 foreign subdir-objects -Wall -Werror])

AC_CONFIG_FILES([Makefile])
AC_CONFIG_SUBDIRS([src/sat/solvers/glucose])

AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB
AM_PROG_AR

AC_OUTPUT
